--- a/branches/Sindicato/Sindicato.WebSite/Reportes/ReporteHojas.rdlc
+++ b/branches/Sindicato/Sindicato.WebSite/Reportes/ReporteHojas.rdlc
@@ -70,6 +70,8 @@
   <Page>
     <PageHeight>14cm</PageHeight>
     <PageWidth>12cm</PageWidth>
+    <InteractiveHeight>15cm</InteractiveHeight>
+    <InteractiveWidth>12cm</InteractiveWidth>
     <LeftMargin>0cm</LeftMargin>
     <RightMargin>0cm</RightMargin>
     <TopMargin>0cm</TopMargin>
