--- a/branches/Sindicato/Sindicato.WebSite/Reportes/ReportePrestamo.rdlc
+++ b/branches/Sindicato/Sindicato.WebSite/Reportes/ReportePrestamo.rdlc
@@ -759,7 +759,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>Nro Semana</Value>
+                              <Value EvaluationMode="Constant">Nro Cuotas</Value>
                               <Style>
                                 <FontFamily>Calibri</FontFamily>
                                 <FontSize>8pt</FontSize>
