--- a/branches/Sindicato/Sindicato.WebSite/Reportes/Hoja131.rdlc
+++ b/branches/Sindicato/Sindicato.WebSite/Reportes/Hoja131.rdlc
@@ -9,29 +9,27 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>="Nro : "&amp; First(Fields!ID_HOJA.Value, "DataSetHoja") &amp; " G-VII"</Value>
+                <Value>="Nro : "&amp; First(Fields!ID_HOJA.Value, "DataSetHoja") &amp; " # " &amp; Sum(Fields!NUMERO.Value, "DataSetHoja")</Value>
                 <Style>
                   <FontSize>14pt</FontSize>
                   <FontWeight>ExtraBold</FontWeight>
                 </Style>
               </TextRun>
             </TextRuns>
-            <Style />
+            <Style>
+              <TextAlign>Center</TextAlign>
+            </Style>
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox1</rd:DefaultName>
-        <Top>0.61449cm</Top>
-        <Left>4.95449cm</Left>
-        <Height>0.75875cm</Height>
-        <Width>5.54271cm</Width>
+        <Top>0.29698cm</Top>
+        <Left>5.29845cm</Left>
+        <Height>0.57354cm</Height>
+        <Width>5.19875cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
           </Border>
-          <PaddingLeft>2pt</PaddingLeft>
-          <PaddingRight>2pt</PaddingRight>
-          <PaddingTop>2pt</PaddingTop>
-          <PaddingBottom>2pt</PaddingBottom>
         </Style>
       </Textbox>
       <Textbox Name="Textbox2">
@@ -44,132 +42,57 @@
                 <Value>=First(Fields!FECHA_COMPRA.Value, "DataSetHoja")</Value>
                 <Style>
                   <FontFamily>Calibri</FontFamily>
-                  <FontSize>14pt</FontSize>
+                  <FontSize>12pt</FontSize>
                   <FontWeight>ExtraBold</FontWeight>
                   <Format>dd/MM/yyyy</Format>
                 </Style>
               </TextRun>
             </TextRuns>
-            <Style />
+            <Style>
+              <TextAlign>Center</TextAlign>
+            </Style>
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox1</rd:DefaultName>
-        <Top>1.47907cm</Top>
-        <Left>4.95449cm</Left>
-        <Height>0.77666cm</Height>
-        <Width>3.63771cm</Width>
+        <Top>0.9058cm</Top>
+        <Left>5.95991cm</Left>
+        <Height>0.41947cm</Height>
+        <Width>4.53729cm</Width>
         <ZIndex>1</ZIndex>
         <Style>
           <Border>
             <Style>None</Style>
           </Border>
-          <PaddingLeft>2pt</PaddingLeft>
-          <PaddingRight>2pt</PaddingRight>
-          <PaddingTop>2pt</PaddingTop>
-          <PaddingBottom>2pt</PaddingBottom>
         </Style>
       </Textbox>
       <Textbox Name="Textbox3">
         <CanGrow>true</CanGrow>
-        <KeepTogether>true</KeepTogether>
         <Paragraphs>
           <Paragraph>
             <TextRuns>
               <TextRun>
                 <Value>=First(Fields!SOCIO.Value, "DataSetHoja")</Value>
                 <Style>
-                  <FontFamily>Calibri</FontFamily>
-                  <FontSize>13pt</FontSize>
+                  <FontSize>12pt</FontSize>
                   <FontWeight>ExtraBold</FontWeight>
                 </Style>
               </TextRun>
             </TextRuns>
-            <Style />
+            <Style>
+              <TextAlign>Left</TextAlign>
+            </Style>
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox1</rd:DefaultName>
-        <Top>2.36156cm</Top>
-        <Left>2.23923cm</Left>
-        <Height>0.87341cm</Height>
-        <Width>8.25797cm</Width>
+        <Top>2.59384cm</Top>
+        <Left>1.89527cm</Left>
+        <Height>0.5cm</Height>
+        <Width>8.60193cm</Width>
         <ZIndex>2</ZIndex>
         <Style>
           <Border>
             <Style>None</Style>
           </Border>
-          <VerticalAlign>Bottom</VerticalAlign>
-          <PaddingLeft>2pt</PaddingLeft>
-          <PaddingRight>2pt</PaddingRight>
-          <PaddingTop>2pt</PaddingTop>
-          <PaddingBottom>2pt</PaddingBottom>
-        </Style>
-      </Textbox>
-      <Textbox Name="Textbox4">
-        <CanGrow>true</CanGrow>
-        <KeepTogether>true</KeepTogether>
-        <Paragraphs>
-          <Paragraph>
-            <TextRuns>
-              <TextRun>
-                <Value>=First(Fields!PLACA.Value, "DataSetHoja")</Value>
-                <Style>
-                  <FontFamily>Calibri</FontFamily>
-                  <FontSize>16pt</FontSize>
-                  <FontWeight>ExtraBold</FontWeight>
-                </Style>
-              </TextRun>
-            </TextRuns>
-            <Style />
-          </Paragraph>
-        </Paragraphs>
-        <rd:DefaultName>Textbox1</rd:DefaultName>
-        <Top>3.27024cm</Top>
-        <Left>7.62678cm</Left>
-        <Height>0.84695cm</Height>
-        <Width>2.87042cm</Width>
-        <ZIndex>3</ZIndex>
-        <Style>
-          <Border>
-            <Style>None</Style>
-          </Border>
-          <PaddingLeft>2pt</PaddingLeft>
-          <PaddingRight>2pt</PaddingRight>
-          <PaddingTop>2pt</PaddingTop>
-          <PaddingBottom>2pt</PaddingBottom>
-        </Style>
-      </Textbox>
-      <Textbox Name="Textbox5">
-        <CanGrow>true</CanGrow>
-        <KeepTogether>true</KeepTogether>
-        <Paragraphs>
-          <Paragraph>
-            <TextRuns>
-              <TextRun>
-                <Value>131</Value>
-                <Style>
-                  <FontFamily>Calibri</FontFamily>
-                  <FontSize>16pt</FontSize>
-                  <FontWeight>ExtraBold</FontWeight>
-                </Style>
-              </TextRun>
-            </TextRuns>
-            <Style />
-          </Paragraph>
-        </Paragraphs>
-        <rd:DefaultName>Textbox1</rd:DefaultName>
-        <Top>3.23496cm</Top>
-        <Left>4.30299cm</Left>
-        <Height>0.88223cm</Height>
-        <Width>2.23542cm</Width>
-        <ZIndex>4</ZIndex>
-        <Style>
-          <Border>
-            <Style>None</Style>
-          </Border>
-          <PaddingLeft>2pt</PaddingLeft>
-          <PaddingRight>2pt</PaddingRight>
-          <PaddingTop>2pt</PaddingTop>
-          <PaddingBottom>2pt</PaddingBottom>
         </Style>
       </Textbox>
       <Textbox Name="Textbox6">
@@ -191,30 +114,27 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox1</rd:DefaultName>
-        <Top>3.27024cm</Top>
-        <Left>1.60423cm</Left>
-        <Height>0.84695cm</Height>
-        <Width>1.52104cm</Width>
-        <ZIndex>5</ZIndex>
+        <Top>3.09384cm</Top>
+        <Left>1.89527cm</Left>
+        <Height>0.60883cm</Height>
+        <Width>1.34905cm</Width>
+        <ZIndex>3</ZIndex>
         <Style>
           <Border>
             <Style>None</Style>
           </Border>
-          <PaddingLeft>2pt</PaddingLeft>
-          <PaddingRight>2pt</PaddingRight>
-          <PaddingTop>2pt</PaddingTop>
-          <PaddingBottom>2pt</PaddingBottom>
         </Style>
       </Textbox>
-      <Textbox Name="Textbox8">
+      <Textbox Name="Textbox9">
         <CanGrow>true</CanGrow>
         <KeepTogether>true</KeepTogether>
         <Paragraphs>
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>="# " &amp; First(Fields!NUMERO.Value, "DataSetHoja")</Value>
+                <Value>=First(Fields!OBLIGACIONES.Value, "DataSetHoja")</Value>
                 <Style>
+                  <FontFamily>Calibri</FontFamily>
                   <FontSize>14pt</FontSize>
                   <FontWeight>ExtraBold</FontWeight>
                   <Format>dd/MM/yyyy</Format>
@@ -225,19 +145,15 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox1</rd:DefaultName>
-        <Top>1.47907cm</Top>
-        <Left>8.5922cm</Left>
-        <Height>0.77666cm</Height>
-        <Width>1.905cm</Width>
-        <ZIndex>6</ZIndex>
+        <Top>3.73795cm</Top>
+        <Left>1.89527cm</Left>
+        <Height>0.90895cm</Height>
+        <Width>8.60193cm</Width>
+        <ZIndex>4</ZIndex>
         <Style>
           <Border>
             <Style>None</Style>
           </Border>
-          <PaddingLeft>2pt</PaddingLeft>
-          <PaddingRight>2pt</PaddingRight>
-          <PaddingTop>2pt</PaddingTop>
-          <PaddingBottom>2pt</PaddingBottom>
         </Style>
       </Textbox>
       <Textbox Name="Textbox7">
@@ -247,9 +163,10 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>=First(Fields!OBLIGACIONES.Value, "DataSetHoja")</Value>
+                <Value>="131"</Value>
                 <Style>
-                  <FontSize>12pt</FontSize>
+                  <FontFamily>Calibri</FontFamily>
+                  <FontSize>16pt</FontSize>
                   <FontWeight>ExtraBold</FontWeight>
                 </Style>
               </TextRun>
@@ -258,30 +175,54 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox1</rd:DefaultName>
-        <Top>4.55816cm</Top>
-        <Left>1.04861cm</Left>
-        <Height>1.65834cm</Height>
-        <Width>9.81901cm</Width>
-        <ZIndex>7</ZIndex>
+        <Top>3.09384cm</Top>
+        <Left>4.39943cm</Left>
+        <Height>0.60883cm</Height>
+        <Width>1.34905cm</Width>
+        <ZIndex>5</ZIndex>
         <Style>
           <Border>
             <Style>None</Style>
           </Border>
-          <PaddingLeft>2pt</PaddingLeft>
-          <PaddingRight>2pt</PaddingRight>
-          <PaddingTop>2pt</PaddingTop>
-          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
+      <Textbox Name="Textbox8">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>=First(Fields!PLACA.Value, "DataSetHoja")</Value>
+                <Style>
+                  <FontFamily>Calibri</FontFamily>
+                  <FontSize>12pt</FontSize>
+                </Style>
+              </TextRun>
+            </TextRuns>
+            <Style>
+              <TextAlign>Right</TextAlign>
+            </Style>
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>Textbox1</rd:DefaultName>
+        <Top>3.09384cm</Top>
+        <Left>6.91298cm</Left>
+        <Height>0.60883cm</Height>
+        <Width>3.58422cm</Width>
+        <ZIndex>6</ZIndex>
+        <Style>
+          <Border>
+            <Style>None</Style>
+          </Border>
+          <PaddingRight>15pt</PaddingRight>
         </Style>
       </Textbox>
     </ReportItems>
-    <Height>13.98cm</Height>
-    <Style>
-      <Border>
-        <Style>None</Style>
-      </Border>
-    </Style>
+    <Height>14cm</Height>
+    <Style />
   </Body>
-  <Width>12cm</Width>
+  <Width>11.55021cm</Width>
   <Page>
     <PageHeight>14cm</PageHeight>
     <PageWidth>12cm</PageWidth>
