--- a/branches/Sindicato/Sindicato.WebSite/Views/Shared/_LogOnLayout.cshtml
+++ b/branches/Sindicato/Sindicato.WebSite/Views/Shared/_LogOnLayout.cshtml
@@ -27,7 +27,7 @@
     <footer>
         <div class="content-wrapper">
             <div class="float-left">
-                <p>&copy; @DateTime.Now.Year - Sistema de Gestion Autotransporte 121 - 11</p>
+                <p>&copy; @DateTime.Now.Year - Sistema de Gestion Transportee SGTRANS</p>
             </div>
         </div>
     </footer>
